force-app/main/default/objects/Path_Activity__c/Path_Activity__c.object-meta.xml
<CustomObject>
    <label>Path Activity</label>
    <nameField>
        <label>Path Activity Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Path Activities</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>