force-app/main/default/objects/Path_Activity__c/fields/Close_URL__c.field-meta.xml
<CustomField>
    <fullName>Close_URL__c</fullName>
    <description>complete the activity if this url is reached</description>
    <inlineHelpText>complete the activity if this url is reached</inlineHelpText>
    <label>Close URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>