force-app/main/default/objects/Path_Activity__c/fields/How_To_URL__c.field-meta.xml
<CustomField>
    <fullName>How_To_URL__c</fullName>
    <label>How To URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>