force-app/main/default/objects/Path_Activity__c/fields/Mobile_Demo_URL__c.field-meta.xml
<CustomField>
    <fullName>Mobile_Demo_URL__c</fullName>
    <label>Mobile Demo URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>