force-app/main/default/objects/Path_Activity__c/fields/Path_Sequence__c.field-meta.xml
<CustomField>
    <fullName>Path_Sequence__c</fullName>
    <label>Path Sequence</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>