force-app/main/default/objects/Path_Activity__c/fields/testMethod__c.field-meta.xml
<CustomField>
    <fullName>testMethod__c</fullName>
    <label>testMethod</label>
    <length>255</length>
    <type>Text</type>
</CustomField>