force-app/main/default/objects/Path_Activity__c/fields/Trailhead_Content__c.field-meta.xml
<CustomField>
    <fullName>Trailhead_Content__c</fullName>
    <label>Trailhead Content</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>