force-app/main/default/objects/Path_Activity__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Path_Name__c</columns>
    <columns>Path_Sequence__c</columns>
    <columns>testMethod__c</columns>
    <columns>Trailhead_Content__c</columns>
    <columns>How_Built_URL__c</columns>
    <columns>How_To_URL__c</columns>
    <columns>Mobile_Demo_URL__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>